--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     </head>
     <body>
         <div>
-<!--        <div class="navbar">
+       <div class="navbar">
+           <!-- 
                 <a href="/">Home</a>
                 <a href="/projects/">Projects</a>
                 <a href="/about/">About</a>
                 <a href="/contact/">Contact</a>
+                        -->
             </div>
-        -->
+
             <div class="title">
                 <h1>Site em desenvolvimento</h1>
             </div>
