--- a/old/index.html
+++ b/old/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me</title>
+        <title>Home</title>
         <link href="1.js">
         <link rel="stylesheet" href="/index.css">
-        <link rel="stylesheet" href="about.css"
         <link rel="icon" href="/favicon.png">
     </head>
     <body>
@@ -15,18 +14,11 @@
                 <a href="/about/">About</a>
                 <a href="/contact/">Contact</a>
             </div>
+
             <div class="title">
-                <h1>About Me</h1>
+                <h1>Site em desenvolvimento</h1>
             </div>
-            <div class="part1">
-                <div class="text1">
-                    <a class="title-t1">Abílio Páscoa (Apascoa)</a><br>
-                    <a class="text-t1"></a>
-                </div>
-                <div class="image1">
-                    <img src="/images/foto-perfil.jpg"> 
-                </div>
-            </div>
+
             <footer id="footer">
                 <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
             </footer>
