--- a/Novo/index.html
+++ b/Novo/index.html
@@ -5,14 +5,15 @@
         <link rel="stylesheet" href="index.css">
         <link rel="icon" href="/favicon.png">
     </head>
-    <body>
-        <nav>
-            <div><a class="navbar-brand" href="#page-top">Brand</a>
-                <div>
-                    <ul>
-                        <li><a href="#Projects">Projetos</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+    <body id="pagetop">
+        <nav class="mainnav">
+            <div id="navcon">
+                <!--<div class="navbc">--><a class="navbar-brand" href="#page-top">Brand</a><!--</div>-->
+                <div id="navbar">
+                    <ul class="ul">
+                        <li class="li"><a href="#Projects">Projetos</a></li>
+                        <li class="li"><a href="#about">About</a></li>
+                        <li class="li"><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
