--- a/index.html
+++ b/index.html
@@ -2,17 +2,44 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="icon" href="/favicon.png">
+        <link rel="stylesheet" href="blink.css">
     </head>
-    <body>
-        <div>
-            <div class="title">
-                <h1>Site em desenvolvimento</h1>
+    <body id="pagetop">
+        <nav class="mainnav">
+            <div id="navcon">
+                <!--<div class="navbc">--><a class="navbar-brand" href="/">APáscoa</a><!--</div>-->
+                <div id="navbar">
+                    <ul class="ul">
+                        <li class="li"><a href="/">Home</a></li>
+                        <li class="li"><a href="/">Projetos</a></li>
+                        <li class="li"><a href=/">About</a></li>
+                        <li class="li"><a href="/">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <footer id="footer">
-                <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
-            </footer>
+        </nav>
+        <header id="header">
+            <div class="container-center">
+                <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
+            </div>
+            <div class="container-center">
+                <a class="name">$Hello-World I'm Abílio Páscoa</a><p class="name blink">_</p>
+            </div>
+            <div>
+                <hr class="linha"></hr>
+            </div>
+            <div class="container-center">
+                <a class="description">Student of the professional course in computer systems management and programming</a>
+            </div>
+        </header>
+        <div class="container-center">
+            <a class="aviso">Web Site in development, some functions may no work!</a>
         </div>
+        <footer id="footer">
+            <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
+        </footer>
+
     </body>
 </html>
