--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/index.css">
         <link rel="icon" href="/favicon.png">
-        <link rel="stylesheet" href="blink.css">
+        <link rel="stylesheet" href="/blink.css">
     </head>
     <body id="pagetop">
         <nav class="mainnav">
