--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <ul class="ul">
                         <li class="li"><a href="/">Home</a></li>
                         <li class="li"><a href="/">Projetos</a></li>
-                        <li class="li"><a href=/">About</a></li>
+                        <li class="li"><a href="/">About</a></li>
                         <li class="li"><a href="/">Contact</a></li>
                     </ul>
                 </div>
