--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body id="pagetop">
         <nav class="mainnav">
             <div id="navcon">
-                <!--<div class="navbc">--><a class="navbar-brand" href="/">APáscoa</a><!--</div>-->
+                <a class="navbar-brand" href="/">APáscoa</a>
                 <div id="navbar">
                     <ul class="ul">
                         <li class="li"><a href="/">Home</a></li>
