--- a/Contact/index.html
+++ b/Contact/index.html
@@ -13,12 +13,26 @@
                     <ul class="ul">
                         <li class="li"><a href="/">Home</a></li>
                         <li class="li"><a href="/">Projects</a></li>
-                        <li class="li"><a href="/">About/a></li>
+                        <li class="li"><a href="/">About</a></li>
                         <li class="li"><a href="/Contact/">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <header id="header">
+            <div class="container-center">
+                <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
+            </div>
+            <div class="container-center">
+                <a class="name">$Contact</a><a class="name blink sicerto">_</a>
+            </div>
+            <div>
+                <hr class="linha"></hr>
+            </div>
+            <div class="container-center">
+                <a class="description"></a>
+            </div>
+        </header>
         <footer id="footer">
             <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
         </footer>
