--- a/Contact/index.html
+++ b/Contact/index.html
@@ -27,7 +27,7 @@
                 <hr class="linha"></hr>
             </div>
             <div class="container-center description">
-                <a href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a>
+                <a href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a><br>
                 <a href="tel:+351968816967">Phone: 968816967</a>
             </div>
         </header>
