--- a/Contact/index.html
+++ b/Contact/index.html
@@ -27,8 +27,8 @@
                 <hr class="linha"></hr>
             </div>
             <div class="container-center description">
-                <div><a href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a></div>
-                <div><a href="tel:+351968816967">Phone: 968816967</a></div>
+                <div class="midtex"><a href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a></div>
+                <div class="midtex"><a href="tel:+351968816967">Phone: 968816967</a></div>
             </div>
         </header>
         <footer id="footer">
