--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
                 <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
             </div>
             <div class="container-center">
-                <a class="name">$Hello-World I'm Abílio Páscoa</a><a class="name blink sicerto">_</a>
+                <a class="name">$Hello-World I'm Abílio Páscoa</a><a class="name blink">_</a>
             </div>
-            <div>
-                <hr class="linha"></hr>
-            </div>
+            <br><br>
             <div class="container-center">
                 <a class="description">Student of the professional course in computer systems management and programming</a>
             </div>
