--- a/Contact/index.html
+++ b/Contact/index.html
@@ -23,12 +23,9 @@
             <div class="container-center">
                 <a class="name">$Contact</a><a class="name blink sicerto">_</a>
             </div>
-            <div>
-                <hr class="linha"></hr>
-            </div>
-            <div class="container-center description">
-                <div class="midtex"><a href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a></div>
-                <div class="midtex"><a href="tel:+351968816967">Phone: 968816967</a></div>
+            <br><br>
+            <div class="container-center">
+                <a class="description" href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a>
             </div>
         </header>
         <footer id="footer">
