--- a/index.html
+++ b/index.html
@@ -11,40 +11,14 @@
             <div id="navcon">
                 <a class="navbar-brand" href="/">APáscoa</a>
                 <div id="navbar">
-                    <ul class="ul">
-                        <li class="li"><a href="/">Home</a></li>
-                        <li class="li"><a href="/">Projects</a></li>
-                        <li class="li"><a href="/">About</a></li>
-                        <li class="li"><a href="/Contact/">Contact</a></li>
-                    </ul>
                 </div>
             </div>
         </nav>
         <header id="header">
             <div class="container-center">
-                <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
-            </div>
-            <div class="container-center">
-                <a class="name">$Hello-World I'm Abílio Páscoa</a><a class="name blink">_</a>
-            </div>
-            <br><br>
-            <div class="container-center">
-                <a class="description">Student of the professional course in computer systems management and programming</a>
+                <a class="aviso">Website is under renovation</a>
             </div>
         </header>
-        <section>
-            <div class="container-center">
-                <a class="aviso">Web Site in development, some functions may not work!</a>
-            </div>
-        </section>
-        <section>
-            <div>
-                
-            </div>
-        </section>
-        <div class="spacediv container-center">
-            <a>End of the page</a>
-        </div>
         <footer id="footer">
             <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
         </footer>
