--- a/index.html
+++ b/index.html
@@ -11,16 +11,51 @@
             <div id="navcon">
                 <a class="navbar-brand" href="/">APáscoa</a>
                 <div id="navbar">
+                    <ul class="ul">
+                        <li class="li"><a href="#header">Home</a></li>
+                        <li class="li"><a href="#">Projects</a></li>
+                        <li class="li"><a href="#">About</a></li>
+                        <li class="li"><a href="#contact">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
-        <header id="header">
-            <div class="container-center">
-                <a class="aviso">Website is under renovation</a>
+        <header id="header" class="section section1">
+            <div class="top-margin">
+                <div class="center-c">
+                    <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
+                </div>
+                <div class="center-c">
+                    <p class="title">
+                        $Hello-World I'm Abílio Páscoa<a class="name blink">_</a>
+                    </p>
+                </div>
+                <br><br>
+                <div class="center-c">
+                    <p class="description">Student of the professional course in computer systems management and programming.</p>
+                </div>
             </div>
         </header>
+
+        <section class="section section1">
+            <div class="center-c">
+                <p class="aviso description">WebSite in development, some functions may not work!</p>
+            </div>
+        </section>
+        <section id="contact" class="section section2">
+            <div class="center-c">
+                <p class="title">
+                    $Contact<a class="title blink">_</a>
+                </p>
+            </div>
+            <br><br>
+            <div class="center-c">
+                <a class="description" href="mailto:contact@apascoa.tk">Mail: contact@apascoa.tk</a>
+            </div>
+        </section>
         <footer id="footer">
-            <p xmlns:cc="http://creativecommons.org/ns#" ><a>This work</a> by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
+            <p xmlns:cc="http://creativecommons.org/ns#" class="auto-width">This work by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
         </footer>
+        <script type="module" src="scripts.js"></script>
     </body>
 </html>
