--- a/404.html
+++ b/404.html
@@ -1,1 +1,40 @@
-404
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home</title>
+        <link rel="stylesheet" href="/index.css">
+        <link rel="icon" href="/favicon.png">
+        <link rel="stylesheet" href="/blink.css">
+    </head>
+    <body id="pagetop">
+        <nav class="mainnav">
+            <div id="navcon">
+                <a class="navbar-brand" href="/">APáscoa</a>
+                <div id="navbar">
+                    <ul class="ul">
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <header id="header" class="section section1">
+            <div class="top-margin">
+                <div class="center-c">
+                    <p class="big_erro">404</p>
+                </div>
+                <br>
+                <div class="center-c">
+                    <p class="title">
+                        $Page not found
+                    </p>
+                </div>
+                <div class="center-c top-margin">
+                    <a class="description" href="/">Go to Home</a>
+                </div>
+            </div>
+            <br><br>
+        </header>
+        <footer id="footer">
+            <p xmlns:cc="http://creativecommons.org/ns#" class="auto-width">This work by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
+        </footer>
+    </body>
+</html>
