Update wrong Info

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
                 <div id="navbar">
                     <ul class="ul">
                         <li class="li"><a href="#header">Home</a></li>
-                        <li class="li"><a href="#">Projects</a></li>
                         <li class="li"><a href="#">About</a></li>
-                        <li class="li"><a href="#contact">Contact</a></li>
+                        <li class="li"><a href="#social">Social</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,15 +41,15 @@
                 <p class="aviso description">WebSite in development, some functions may not work!</p>
             </div>
         </section>
-        <section id="contact" class="section section2">
+        <section id="social" class="section section2">
             <div class="center-c">
                 <p class="title">
-                    $Contact<a class="title blink">_</a>
+                    $Social<a class="title blink">_</a>
                 </p>
             </div>
             <br><br>
             <div class="center-c">
-                <a class="description" href="mailto:contact@apascoa.tk">Mail: contact@apascoa.tk</a>
+                <a class="description" href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a>
             </div>
         </section>
         <footer id="footer">
