New Version Update

--- a/index.html
+++ b/index.html
@@ -1,60 +1,17 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" href="/index.css">
-        <link rel="icon" href="/favicon.png">
-        <link rel="stylesheet" href="/blink.css">
-    </head>
-    <body id="pagetop">
-        <nav class="mainnav">
-            <div id="navcon">
-                <a class="navbar-brand" href="/">APáscoa</a>
-                <div id="navbar">
-                    <ul class="ul">
-                        <li class="li"><a href="#header">Home</a></li>
-                        <li class="li"><a href="#">About</a></li>
-                        <li class="li"><a href="#social">Social</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <header id="header" class="section section1">
-            <div class="top-margin">
-                <div class="center-c">
-                    <img class="avatar" src="https://avatars.githubusercontent.com/u/51238719?s=400&v=4">
-                </div>
-                <div class="center-c">
-                    <p class="title">
-                        $Hello-World I'm Abílio Páscoa<a class="name blink">_</a>
-                    </p>
-                </div>
-                <br><br>
-                <div class="center-c">
-                    <p class="description">Student of the professional course in computer systems management and programming.</p>
-                </div>
-            </div>
-        </header>
-
-        <section class="section section1">
-            <div class="center-c">
-                <p class="aviso description">WebSite in development, some functions may not work!</p>
-            </div>
-        </section>
-        <section id="social" class="section section2">
-            <div class="center-c">
-                <p class="title">
-                    $Social<a class="title blink">_</a>
-                </p>
-            </div>
-            <br><br>
-            <div class="center-c">
-                <a class="description" href="mailto:abiliodpascoa@gmail.com">Mail: abiliodpascoa@gmail.com</a>
-            </div>
-        </section>
-        <footer id="footer">
-            <p xmlns:cc="http://creativecommons.org/ns#" class="auto-width">This work by <span property="cc:attributionName">Abílio Páscoa</span> is licensed under <a class="link" href="http://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-ND 4.0<img style="height:30px!important;margin-left:5px;vertical-align:text-top;" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a></p>
-        </footer>
-        <script type="module" src="scripts.js"></script>
-    </body>
+<head>
+    <title>APascoa</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="blink.css">
+</head>
+<script src="index.js"></script>
+<body>
+    <div id="textcont">
+        <p>User@Portfolio:~ $<a class="red" id="startbt" onclick="start()">(Start)</a><a class="blink" id="text">_</a><a id="Guide" class="yellow"> (To Use This Website, Just Click in the </a><a class="orange">Orange</a><a id="Guide" class="yellow"> Options)</a></p>
+    </div>
+    <div id="EndOfPage"></div>
+</body>
 </html>
+
